# rig-nvidia

./: Cargo.toml  LICENSE  README.md
src/: client.rs  completion.rs  embedding.rs  error.rs  json_utils.rs  lib.rs  message.rs  streaming.rs
src/tests/: client.rs  completion_model.rs  embedding_model.rs  json_utils.rs  message_conversion.rs  mod.rs  streaming_types.rs
